--- a/Crianza.html
+++ b/Crianza.html
@@ -16,7 +16,7 @@
         body {
             margin: 0;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-image: url("Imagenes/crianza.jpg");
+            background-image: url("Imagenes/Crianza.jpg");
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
