--- a/Red.html
+++ b/Red.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
+<!DOCTYPE html><html lang="es"><head>
   <meta charset="UTF-8">
   <title>Farmeo Red</title>
 
@@ -98,32 +96,32 @@
     .samurott { color: #add8e6; font-weight: bold; }
     .serperior { color: #3cb371; font-weight: bold; }
     .emboar { color: #ff0000; font-weight: bold; }
-  </style>
-</head>
-
-<body>
+    
+    /* Estilo para la etiqueta Rival */
+    .rival-tag { color: #ff4d4d; font-weight: bold; font-style: italic; }
+  </style></head><body>
   <div class="overlay">
     <div class="content">
 
-      <h1>🔥 Farmeo Red</h1>
+      <h1>🚀 Farmeo Red</h1>
 
       <div class="paste-box">
-        <h2>🧩 Paste del equipo</h2>
+        <h2>📋 Paste del equipo</h2>
         <img src="Imagenes/PasteRed.png" alt="Paste Red">
       </div>
 
       <div class="guia">
-        <h2>📋 Guía paso a paso</h2>
+        <h2>📖 Guía paso a paso</h2>
 
         <span class="blissey">IMPORTANTE:</span> Iniciar siempre con <span class="blissey">Blissey</span><br><br>
 
         <strong>Gen 1 – Líder</strong><br>
-        • Iniciales / <span class="espeon">Espeon</span>  
+        • Iniciales / <span class="espeon">Espeon</span> <span class="rival-tag">(Rival)</span>  
         → Cambiar a <span class="honchkrow">Honchkrow</span> ➤ Golpe bajo<br>
-        • <span class="pikachu">Pikachu</span>  
+        • <span class="pikachu">Pikachu</span> <span class="rival-tag">(Rival)</span>  
         → Intercambio  
         → <span class="honchkrow">Honchkrow</span> ➤ Golpe bajo<br>
-        • <span class="snorlax">Snorlax</span>  
+        • <span class="snorlax">Snorlax</span> <span class="rival-tag">(Rival)</span>  
         → Teletransporte y sacar <span class="breloom">Breloom</span> ➤ Demolición  
         → <span class="honchkrow">Honchkrow</span> ➤ Golpe bajo<br><br>
 
@@ -139,7 +137,7 @@
         • <span class="snorlax">Snorlax</span> ➤ Fuerza bruta<br><br>
 
         <strong>Gen 2 – Líder</strong><br>
-        • <span class="gliscor">Gliscor</span>  
+        • <span class="gliscor">Gliscor</span> <span class="rival-tag">(Rival)</span>  
         → <span class="golduck">Golduck</span> ➤ Otra vez  
         → <span class="gliscor">Gliscor</span> ➤ Danza espada + Pulimento<br><br>
 
@@ -147,7 +145,7 @@
         Terremoto en: <span class="typhlosion">Typhlosion</span>, <span class="pikachu">Pikachu</span>, <span class="tyranitar">Tyranitar</span><br><br>
 
         <strong>Gen 3 – Líder</strong><br>
-        • <span class="swampert">Swampert</span>  
+        • <span class="swampert">Swampert</span> <span class="rival-tag">(Rival)</span>  
         → <span class="golduck">Golduck</span> ➤ Otra vez  
         → <span class="gliscor">Gliscor</span> ➤ Danza espada + Pulimento<br><br>
 
@@ -155,7 +153,7 @@
         Terremoto en: <span class="metagross">Metagross</span>, <span class="pikachu">Pikachu</span><br><br>
 
         <strong>Gen 4 – Líder</strong><br>
-        • <span class="staraptor">Staraptor</span>  
+        • <span class="staraptor">Staraptor</span> <span class="rival-tag">(Rival)</span>  
         → Sacrificar <span class="blissey">Blissey</span> y otros pokes  
         → <span class="lapras">Lapras</span> ➤ Danza dragón x2 + Sustituto<br><br>
 
@@ -163,10 +161,10 @@
         Terremoto en: <span class="empoleon">Empoleon</span><br><br>
 
         <strong>Gen 5 – Líder</strong><br>
-        • <span class="excadrill">Excadrill</span> → <span class="honchkrow">Honchkrow</span> / <span class="breloom">Breloom</span> ➤ Ultra puño<br>
-        • <span class="pikachu">Pikachu</span> → Intercambio + Teletransporte<br>
-        • <span class="hydreigon">Hydreigon</span> / <span class="samurott">Samurott</span> / <span class="serperior">Serperior</span> → Teletransporte<br>
-        • <span class="emboar">Emboar</span>  
+        • <span class="excadrill">Excadrill</span> <span class="rival-tag">(Rival)</span> → <span class="honchkrow">Honchkrow</span> / <span class="breloom">Breloom</span> ➤ Ultra puño ➤ Seguir pasos Emboar<br>
+        • <span class="pikachu">Pikachu</span> <span class="rival-tag">(Rival)</span> → Intercambio + Teletransporte ➤ Seguir pasos Emboar<br>
+        • <span class="hydreigon">Hydreigon</span> / <span class="samurott">Samurott</span> / <span class="serperior">Serperior</span> <span class="rival-tag">(Rival)</span> → Teletransporte ➤ Seguir pasos Emboar<br>
+        • <span class="emboar">Emboar</span> <span class="rival-tag">(Rival)</span>  
         → <span class="lapras">Lapras</span> (si aplica)  
         → <span class="golduck">Golduck</span> ➤ Bostezo + Doble filo  
         → <span class="breloom">Breloom</span> ➤ Danza espada<br><br>
