--- a/Red.html
+++ b/Red.html
@@ -176,6 +176,5 @@
       <a class="volver" href="index.html">⬅ Volver al menú</a>
 
     </div>
-  </div>
-</body>
+  </div></body></html>
 </html>
