--- a/EscCorazon.html
+++ b/EscCorazon.html
@@ -92,7 +92,7 @@
       <div class="guia">
         <h2>📍 Colosalia (Ever Grande City)</h2>
         <div class="map-container">
-          <img src="Imagenes/colosalia.png" class="map-half">
+          <img src="Imagenes/Colosalia.png" class="map-half">
           <img src="Imagenes/ColosaliaHub.png" class="map-half">
         </div>
         
